# TimeToThink

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  TODO.md  generate-icons.sh  index.html  package-lock.json  package.json
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: guard_control.rs  lib.rs  macos_lock.rs  main.rs  timer_engine.rs  types.rs
src/components/: BreakGuardView.vue  MainView.vue  SkipConfirmDialog.vue
