[package]
name = "timetothink"
version = "0.1.0"
description = "A macOS Pomodoro timer with enforced breaks"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
